Pequenos ajustes no HTML

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <div class="list-insert">
                         <div class="list-insert">
                             <span class="list-insert--mercadoria">
-                                Nenhuma mercadoria
+                                Nenhuma transação cadastrada
                             </span>
                         </div>
                         <div class="list-insert">
