--- a/index.html
+++ b/index.html
@@ -49,34 +49,39 @@
         <section class="bodybg">
             <div class="body">
                 <div class="form">
-                    <div class="form-title form">
+                    <div class="form-title">
                         <span class="form-title--tipo-transacao" id="form-title--tipo-transacao">
+                            Nova transação
+                        </span>
+                    </div>
+                    <div class="form-subtitle">
+                        <span class="form-subtitle--tipo-transacao" id="form-subtitle--tipo-transacao">
                             Tipo de Transação
                         </span>
                     </div>
-                    <div class="form-combobox form">
+                    <div class="form-combobox">
                         <select class="form-combobox--itens" name="form-combobox--itens" id="form-combobox--itens">
                             <option value="Compra">Compra</option>
                             <option value="Venda">Venda</option>
                         </select>
                     </div>
-                    <div class="form-title form">
+                    <div class="form-title">
                         <span class="form-title--nome-mercadoria" id="form-title--nome-mercadoria">
                             Nome da Mercadoria
                         </span>
                     </div>
-                    <div class="form-input form">
+                    <div class="form-input">
                         <input class="form-input--nome-mercadoria" id="form-input--nome-mercadoria" placeholder="Input" type="text" />
                     </div>
-                    <div class="form-title form">
+                    <div class="form-title">
                         <span class="form-title--valor" id="form-title--valor">
                             Valor
                         </span>
                     </div>
-                    <div class="form-input form">
+                    <div class="form-input">
                         <input class="form-input--valor" id="form-input--valor" placeholder="R$ 0,00" type="text" />
                     </div>
-                    <div class="form-buttom form">
+                    <div class="form-buttom">
                         <button class="form-buttom--add-transacao" id="form-buttom--add-transacao">
                             Adicionar Transação
                         </button>
