--- a/index.html
+++ b/index.html
@@ -10,165 +10,187 @@
 
 </head>
 
-<body>
-    <div class="content">
-        <header class="headerbg">
-            <div class="header">
-                <div class="header-icon-title" id="header-icon-title">
-                    <img src="./assets/img/logo.png" alt="logo">
-
-
-                    <span id="header-title--span">
-                        Controle Financeiro
-
-                    </span>
-
+<body id="content">
+    <header id="headerbg">
+        <div id="header">
+            <div id="header-icon-title">
+                <img src="./assets/img/logo.png" alt="logo" id="header-icon-title--img">
+                <span id="header-icon-title--span">
+                    Controle Financeiro
+                </span>
+            </div>
+            <div class="header-menu" id="header-menu">
+                <div class="header-menu-buttom" id="header-menu-buttom--hamburguer">
+                    <img src="./assets/img/hamburguer.png" alt="menu">
                 </div>
+                <div class="header-menu-item">
 
-                <div class="header-menu" id="header-menu">
-                    <div class="header-menu--buttom" id="header-menu--buttom-hamburguer">
-                        <img src="./assets/img/hamburguer.png" alt="menu">
-                    </div>
-                    <div class="header-menu--item">
-                        <div class='header-menu--buttom' id="header-menu--buttom-fechar">
+                    <span id="header-menu-buttom--fechar">
                             x
-                        </div>
-                        <div class='header-menu--buttom' id="header-menu--buttom-transacoes">
+                        </span>
+
+                    <div class="header-menu-buttom" id='header-menu-buttom-div1'>
+                        <span id="header-menu-buttom--transacoes">
                             Cadastro de transações
-                        </div>
-                        <div class='header-menu--buttom' id="header-menu--buttom-limpar">
-                            Limpar dados
-                        </div>
-                        <div class='header-menu--buttom' id="header-menu--buttom-salvar">
-                            Salvar no servidor
-                        </div>
-
-
+                        </span>
                     </div>
-
+                    <div class="header-menu-buttom" id='header-menu-buttom-div2'>
+                        <span id="header-menu-buttom--limpar">
+                            Limpar dados
+                        </span>
+                    </div>
+                    <div class="header-menu-buttom" id='header-menu-buttom-div3'>
+                        <span id="header-menu-buttom--salvar">
+                            Salvar no servidor
+                        </span>
+                    </div>
                 </div>
             </div>
-        </header>
-        <section class="bodybg">
-            <div class="body">
-                <div class="formbg">
-                    <div class="form-title-main form">
-                        <span class="form-title--tipo-transacao" id="form-title--tipo-transacao">
-                            Nova transação
+        </div>
+    </header>
+    <section id="bodybg">
+        <div id="body">
+            <div id="formbg">
+                <div id="form-title-main">
+                    <span class="form-title--tipo-transacao" id="form-title--tipo-transacao">
+                        Nova transação
+                    </span>
+                </div>
+                <div class="form-title">
+                    <span id="form-subtitle--tipo-transacao">
+                        Tipo de Transação
+                    </span>
+                </div>
+                <div class="form-combobox">
+                    <select name="form-combobox--itens" id="form-combobox--itens">
+                        <option value="Compra">Compra</option>
+                        <option value="Venda">Venda</option>
+                    </select>
+                </div>
+                <div class="form-title">
+                    <span id="form-title--nome-mercadoria">
+                        Nome da Mercadoria
+                    </span>
+                </div>
+                <div class="form-input">
+                    <input id="form-input--nome-mercadoria" placeholder="Input" type="text" />
+                </div>
+                <div class="form-title">
+                    <span id="form-title--valor">
+                        Valor
+                    </span>
+                </div>
+                <div class="form-input">
+                    <input id="form-input--valor" placeholder="R$ 0,00" type="text" />
+                </div>
+                <div class="form-buttom">
+                    <button id="form-buttom--add-transacao">
+                        Adicionar Transação
+                    </button>
+                </div>
+            </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+            <div id="list">
+                <div id="list-title">
+                    <span id="list-title--extrato">
+                            Extrato de transações
                         </span>
+                </div>
+                <div id="list-subtitle">
+                    <div class="list-subtitle-div">
+                        <span id="list-subtitle--mercadoria">
+                                Mercadoria
+                            </span>
                     </div>
-                    <div class="form-title form">
-                        <span class="form-subtitle--tipo-transacao" id="form-subtitle--tipo-transacao">
-                            Tipo de Transação
-                        </span>
-                    </div>
-                    <div class="form-combobox form">
-                        <select class="form-combobox--itens" name="form-combobox--itens" id="form-combobox--itens">
-                            <option value="Compra">Compra</option>
-                            <option value="Venda">Venda</option>
-                        </select>
-                    </div>
-                    <div class="form-title form">
-                        <span class="form-title--nome-mercadoria" id="form-title--nome-mercadoria">
-                            Nome da Mercadoria
-                        </span>
-                    </div>
-                    <div class="form-input form">
-                        <input class="form-input--nome-mercadoria" id="form-input--nome-mercadoria" placeholder="Input"
-                            type="text" />
-                    </div>
-                    <div class="form-title form">
-                        <span class="form-title--valor" id="form-title--valor">
+                    <div class="list-subtitle-div">
+                        <span id="list-subtitle--valor">
                             Valor
                         </span>
                     </div>
-                    <div class="form-input form">
-                        <input class="form-input--valor" id="form-input--valor" placeholder="R$ 0,00" type="text" />
-                    </div>
-                    <div class="form-buttom form">
-                        <button class="form-buttom--add-transacao" id="form-buttom--add-transacao">
-                            Adicionar Transação
-                        </button>
-                    </div>
                 </div>
-                <div class="list">
-                    <div class="list-titles">
-                        <div class="list-title">
-                            <span class="list-title--extrato" id="list-title--extrato">
-                                Extrato de transações
-                            </span>
-                        </div>
-                        <div class="list-subtitle">
-                            <div class="list-subtitle-div">
-                                <span class="list-subtitle--mercadoria">
-                                    Mercadoria
-                                </span>
-                            </div>
-                            <div class="list-subtitle-div">
-                                <span class="list-subtitle--valor">
-                                    Valor
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="list-insert">
-                        <div class="list-insert-div">
-                            <span class="list-insert--simbolo">
-                                +
-                            </span>
-                            <span class="list-insert--mercadoria">
-                                Nenhuma transação cadastrada
-                            </span>
-                        </div>
-                        <div class="list-insert-div">
-                            <span class="list-insert--valor">
-                                R$ 0,00
-                            </span>
-                        </div>
-                    </div>
-                    <div class="list-insert">
-                        <div class="list-insert-div">
-                            <span class="list-insert--simbolo">
-                                +
-                            </span>
-                            <span class="list-insert--mercadoria">
-                                Nenhuma transação cadastrada
-                            </span>
-                        </div>
-                        <div class="list-insert-div">
-                            <span class="list-insert--valor">
-                                R$ 0,00
-                            </span>
-                        </div>
-                    </div>
-                    <div class="list-total">
-                        <div class="list-total-div">
-                            <span class="list-total--mercadoria">
-                                Total
-                            </span>
-                        </div>
-                        <div class="list-total-div">
-                            <div class="list-insert--valor">
-                                <span class="list-insert--valor">
-                                    R$ 0,00
-                                </span>
-                            </div>
-                            <div class="list-insert--valor-label">
-                                <span class="list-insert--valor-label">
-                                    [Lucro]
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <footer>
-            <div class="footer">
 
+
+
+
+                <div class="list-insert">
+                    <div class="list-insert-div">
+                        <span class="list-insert--simbolo">
+                            +
+                        </span>
+                        <span class="list-insert--mercadoria">
+                            Nenhuma transação cadastrada
+                        </span>
+                    </div>
+                    <div class="list-insert-div">
+                        <span class="list-insert--valor">
+                            R$ 0,00
+                        </span>
+                    </div>
+                </div>
+                <div class="list-insert">
+                    <div class="list-insert-div">
+                        <span class="list-insert--simbolo">
+                            +
+                        </span>
+                        <span class="list-insert--mercadoria">
+                            Nenhuma transação cadastrada
+                        </span>
+                    </div>
+                    <div class="list-insert-div">
+                        <span class="list-insert--valor">
+                            R$ 0,00
+                        </span>
+                    </div>
+                </div>
+
+
+
+                <div id="list-total">
+                    <div class="list-total-div">
+                        <span class="list-total--mercadoria">
+                            Total
+                        </span>
+                    </div>
+                    <div class="list-total-div">
+                        <div class="list-insert--valor">
+                            <span class="list-insert--valor">
+                                R$ 0,00
+                            </span>
+                        </div>
+                        <div class="list-insert--valor-label">
+                            <span class="list-insert--valor-label">
+                                [Lucro]
+                            </span>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </footer>
-    </div>
+
+        </div>
+    </section>
+    <footer>
+        <div class="footer">
+
+        </div>
+    </footer>
+
 </body>
 
 </html>
